--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     height: 50vh;
     background-color: red;
+    display: flex;
 }
 
 .box {
@@ -26,4 +27,3 @@
 
 
 
-/* Stwórz diva na 90% szerokości ekranu, który będzie zawsze wyśrodkowany w poziomie przy pomocy marginesu. Dodaj do niego 3 divy i spraw, aby zajmowały dokładnie 33.33% rodzica. */
